--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,7 @@
   --secondary-variant: hsla(229, 55%, 36%, 1);
   --surface: rgb(243, 243, 243);
   --surface-dark: rgb(14, 14, 14);
+  --shadow: rgb(95, 102, 133);
 }
 
 body, html {
@@ -30,6 +31,8 @@ nav {
   height: 7rem;
   background-color: var(--secondary-variant);
   align-items: center;
+
+  box-shadow: 0px 6px 12px -2px var(--shadow);
 }
 
 .nav__logo {
@@ -43,11 +46,11 @@ nav {
   justify-self: center;
   display: flex;
   height: 100%;
-  gap: 3.5rem;
+  gap: 4rem;
 }
 
 .nav__links > * {
-  font-size: 28px;
+  font-size: 24px;
   text-decoration: none;
   height: 100%;
   display: grid;
@@ -59,6 +62,7 @@ nav {
 
 .nav__links > *:hover {
   transition: 0.2s;
+  font-size: 28px;
   color: var(--tertiary);
 }
 
