--- a/src/style.css
+++ b/src/style.css
@@ -165,7 +165,7 @@ form {
   border: 4px inset var(--tertiary);
 }
 
-form > label {
+label {
   font-size: 24px;
   font-weight: 500;
 }
@@ -194,4 +194,35 @@ form.off {
 .blur {
   filter: blur(5px);
   transition: ease-in 0.05s;
+}
+
+.form__btn--close {
+  width: 2rem;
+  align-self: flex-end;
+}
+
+.form__last-row {
+  display: flex;
+  align-items: center;
+  gap: 3rem;
+  flex-wrap: wrap;
+}
+
+.form__btn--submit {
+  width: 9rem;
+  height: 3.25rem;
+  border-radius: 36px;
+  font-size: 24px;
+  font-weight: 600;
+  border: none;
+  margin-left: auto;
+  background-color: var(--secondary);
+  color: var(--surface);
+
+  transition: 0.2s;
+}
+
+.form__btn--submit:hover {
+  background-color: var(--secondary-variant);
+  transition: 0.2s;
 }
