feat: add ID system to serve as a primary key for book cards

--- a/src/style.css
+++ b/src/style.css
@@ -226,3 +226,9 @@ form.off {
   background-color: var(--secondary-variant);
   transition: 0.1s;
 }
+
+/* card ID */
+
+.card--book__id {
+  display: none;
+}
