--- a/src/style.css
+++ b/src/style.css
@@ -97,7 +97,7 @@ nav {
 
 main {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   padding: 3rem;
   gap: 2rem;
   height: max(calc(100% - 7rem), min-content); /* 100% of the viewport - height of navbar */
