feat: add delete card functionality

--- a/src/style.css
+++ b/src/style.css
@@ -237,3 +237,35 @@ form.off {
 .card--book__id {
   display: none;
 }
+
+/* card close button taken from https://stackoverflow.com/questions/18611195/x-close-button-only-using-css */
+
+.close {
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
+  width: 32px;
+  height: 32px;
+  opacity: 0.3;
+}
+
+.close:hover {
+  opacity: 1;
+}
+
+.close:before, .close:after {
+  position: absolute;
+  left: 24px;
+  content: ' ';
+  height: 15px;
+  width: 2px;
+  background-color: #333;
+}
+
+.close:before {
+  transform: rotate(45deg);
+}
+
+.close:after {
+  transform: rotate(-45deg);
+}
